kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasky-dev
  labels:
    app: tasky
    version: v1.0.0
    environment: development
    tier: backend
spec: {}
status: {}
