kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskyapp-deploy
  namespace: dev
  labels:
    app: tasky
    version: v1.0.0
    environment: development
    tier: backend
    purpose: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
      tier: backend
  template:
    metadata:
      labels:
        app: tasky
        tier: backend
    spec:
      securityContext:
        runAsUser: 1000                     # Run the container as a non-root user
        runAsGroup: 3000                    # Run the container with a specific group
        fsGroup: 2000                       # Set the file system group for the container
      restartPolicy: Always
      containers:
      - image: enavarro01/tasky-app:1.1     # Docker image for the application
        imagePullPolicy: Always             # Always pull the latest image
        name: tasky-app
        ports:
        - containerPort: 3030
          name: http
          protocol: TCP
        # Resource requests and limits for the container
        # Requests are the minimum resources required for the container to run
        # Limits are the maximum resources the container can use
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        # Probes to check the health of the application
        startupProbe:
          httpGet: 
            path: /health
            port: 3030
          initialDelaySeconds: 3  # Initial delay before the first probe
          periodSeconds: 5        # Interval between probes
          timeoutSeconds: 3       # Timeout for each probe
        readinessProbe:
          httpGet:
            path: /readyz
            port: 3030
          initialDelaySeconds: 5  # Initial delay before the first probe
          periodSeconds: 5        # Interval between probes
          timeoutSeconds: 3       # Timeout for each probe
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3030
          initialDelaySeconds: 5  # Initial delay before the first probe
          periodSeconds: 5        # Interval between probes
          timeoutSeconds: 3       # Timeout for each probe
        securityContext:
          capabilities:
            drop: ["ALL"]                   # Drop all capabilities for security
          allowPrivilegeEscalation: false   # Prevent privilege escalation
          readOnlyRootFilesystem: true      # Make the root filesystem read-only
          runAsNonRoot: true                # Ensure the container runs as a non-root user


---
apiVersion: v1
kind: Service
metadata:
  name: taskyapp-svc
  namespace: dev
  labels:
    app: tasky
    version: v1.0.0
    environment: development
    tier: backend
    purpose: service
spec:
  type: NodePort
  selector:
    app: tasky
  ports:
  - protocol: TCP
    port: 3030
    targetPort: 3030
    nodePort: 30300 # NodePort has to be in the range 30000-32767
