kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskyapp-ingress
  namespace: dev
  labels:
    app: tasky
    version: v1.0.0
    environment: development
    tier: ingress
    purpose: routing
spec:
  tls:
  - hosts:
    - tasky.com                     # Replace with your domain
    secretName: tasky-tls-secret    # Name of the TLS secret created below
  rules:
  - host: tasky.com                 # Replace with your domain (I added this to the /etc/hosts file on my local machine)
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: taskyapp-svc  # Service name for the Tasky app
            port:
              number: 3030      # Port exposed by the service not by the NodePort
